--- a/style.css
+++ b/style.css
@@ -58,6 +58,18 @@ td, th {
     border-collapse: collapse;
     padding: 5px;
 }
+ul#tableofcontents {
+    background-color: hsl(270, 50, 50);
+    padding: 5px;
+    overflow: hidden;
+    display: block;
+}
+ul#tableofcontents li {
+    background-color: hsl(90, 30, 50);
+    padding: 5px;
+    overflow: hidden;
+    display: block;
+}
 #hiContent {
     outline-style: groove;
     outline-color: invert;
@@ -97,9 +109,20 @@ ul#topbar li a {
 }
 
 /* Active Elements */
-a {
-    color: red;
+a:link {
+    color: hsl(0, 70%, 30%);
+    text-decoration: none;
+}
+a:visited {
+    color: hsl(240, 70%, 30%);
+    text-decoration: none;
+}
+a:hover {
+    color: white;
     text-decoration: underline;
+}
+a:active {
+    background-color: white;
 }
 a.nav {
     text-decoration: none;
